tests/snapshots/run_wpt_conformance__litert_notEqual_float16_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "not_equal.https.any.js",
    "notEqual float16 1D tensors",
    "litert",
    "PASS",
)
